using build.sbt to match the newman project more closely